# HashPipe

./: .gitignore  CMakeLists.txt
data/: in.txt
data/in/: in.txt
docs/: HASHING_ESTATICO.md  HASHING_EXTENSIVEL.md  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt  cmake_install.cmake
src/database/: CMakeLists.txt
src/database/include/: Database.h
src/database/src/: Database.cpp
src/file/: CMakeLists.txt
src/file/include/: file.h  fileread.h
src/file/src/: file.c  fileread.c
src/hash/: CMakeLists.txt  cmake_install.cmake
src/hash/include/: HashBucket.h  HashDirectory.h  hash.h
src/hash/src/: HashBucket.cpp  HashDirectory.cpp  hash.c  hash.cpp
src/main/: CMakeLists.txt  cmake_install.cmake  main.c  main.cpp
test/: CMakeLists.txt
test/test_file/: CMakeLists.txt  test_file_read.c
test/test_hash/: CMakeLists.txt  test_hash_func.c
